created the timer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <p class="high-scores"><a href="highscores.html">View Highscores</a></p>
-        <p class="time">Time: 0</p>
+        <p id="time">Time: 75</p>
     </header>
     <main>
         <section id ="welcome-page" class="welcome-page">
