now displays the final score

--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Highscores</h1>
-    <button><a href="index.html">Go Back</a></button>
+    <button><a id="goback" href="index.html">Go Back</a></button>
     <button>Clear Highscores</button>
 </body>
 </html>
