--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                 <button class="buttonFive">3.for loops</button>
                 <button class="buttonFive">4.console log</button>
             </section>
+            <section id ="end" class="end none">
+                <h1>All Done!</h1>
+                <p id="final-score"></p>
+                <label for="initals">Enter your initals: <input type="text" id="initals" name="intials"></label>
+                <button class="submit"><a id="submit" href="./highscores.html">Submit</a></button>
+            </section>
         </form>
        
     </main>
