reworked the event listeners on buttons

--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Highscores</h1>
+    <p class="score-display"></p>
     <button><a id="goback" href="index.html">Go Back</a></button>
     <button>Clear Highscores</button>
+    
 </body>
 </html>
