--- a/index.html
+++ b/index.html
@@ -16,48 +16,48 @@
         <section id ="welcome-page" class="welcome-page">
             <h1>Coding Quiz Challenge</h1>
             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/times by ten seconds!</p>
-            <button id="buttonZero">Start Quiz</button>
+            <button id="buttonZero" class="correct">Start Quiz</button>
         </section>
         <form>
-            <section id="Q1" class="Q1 none" data-answer="3.alerts">
+            <section id="Q1" class="QS Q1 none" data-answer="3.alerts">
                 <h1>Commonly used data types DO NOT incdule:</h1>
                 <div class="answers">   
-                     <button class="buttonOne">1.strings</button>
-                     <button class="buttonOne">2.booleans</button>
-                     <button class="buttonOne">3.alerts</button>
-                     <button class="buttonOne">4.numbers</button>
+                     <button class="QB buttonOne">1.strings</button>
+                     <button class="QB buttonOne">2.booleans</button>
+                     <button class="QB buttonOne correct">3.alerts</button>
+                     <button class="QB buttonOne">4.numbers</button>
                 </div>
                 
             </section>
-            <section id="Q2" class="Q2 none" data-answer="3.parentheses">
+            <section id="Q2" class="QS Q2 none" data-answer="3.parentheses">
                 <h1>The condition in an if / else statement is enclosed within <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>.</h1>
-                <button class="buttonTwo">1.quotes</button>
-                <button class="buttonTwo">2.curly brackets</button>
-                <button class="buttonTwo">3.parentheses</button>
-                <button class="buttonTwo">4.square brackets</button>
+                <button class="QB buttonTwo">1.quotes</button>
+                <button class="QB buttonTwo">2.curly brackets</button>
+                <button class="QB buttonTwo correct">3.parentheses</button>
+                <button class="QB buttonTwo">4.square brackets</button>
             </section>
-            <section id = "Q3" class="Q3 none" data-answer="4.all of the above">
+            <section id = "Q3" class="QS Q3 none" data-answer="4.all of the above">
                 <h1>Arrays in JavaScript can be used to store <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>.</h1>  
-                <button class="buttonThree">1.numbersnand strings</button>
-                <button class="buttonThree">2.other arrays</button>
-                <button class="buttonThree">3.booleans</button>
-                <button class="buttonThree">4.all of the above</button>
+                <button class="QB buttonThree">1.numbersnand strings</button>
+                <button class="QB buttonThree">2.other arrays</button>
+                <button class="QB buttonThree">3.booleans</button>
+                <button class="QB buttonThree correct">4.all of the above</button>
             </section>
-            <section id = "Q4" class="Q4 none" data-answer="3.quotes">
+            <section id = "Q4" class="QS Q4 none" data-answer="3.quotes">
                 <h1>String values must be enclosed within <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span> when being assigned to variables.</h1>
-                <button class="buttonFour">1.commas</button>
-                <button class="buttonFour">2.curly brackets</button>
-                <button class="buttonFour">3.quotes</button>
-                <button class="buttonFour">4.parentheses</button>
+                <button class="QB buttonFour">1.commas</button>
+                <button class="QB buttonFour">2.curly brackets</button>
+                <button class="QB buttonFour correct">3.quotes</button>
+                <button class="QB buttonFour">4.parentheses</button>
             </section>
-            <section id="Q5" class="Q5 none" data-answer="4.console log">
+            <section id="Q5" class="QS Q5 none" data-answer="4.console log">
                 <h1>A very userful tool used during devlopment and debugging for printing content to the debugger is:</h1>
-                <button class="buttonFive">1.JavaScript</button>
-                <button class="buttonFive">2.terminal / bash</button>
-                <button class="buttonFive">3.for loops</button>
-                <button class="buttonFive">4.console log</button>
+                <button class="QB buttonFive">1.JavaScript</button>
+                <button class="QB buttonFive">2.terminal / bash</button>
+                <button class="QB buttonFive">3.for loops</button>
+                <button class="QB buttonFive correct">4.console log</button>
             </section>
-            <section id ="end" class="end none">
+            <section id ="end" class="QS end none">
                 <h1>All Done!</h1>
                 <p id="final-score"></p>
                 <label for="initals">Enter your initals: <input type="text" id="initals" name="intials"></label>
