--- a/index.html
+++ b/index.html
@@ -18,53 +18,54 @@
             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/times by ten seconds!</p>
             <button id="buttonZero" class="correct">Start Quiz</button>
         </section>
-        <form>
-            <section id="Q1" class="QS Q1 none" data-answer="3.alerts">
-                <h1>Commonly used data types DO NOT incdule:</h1>
-                <div class="answers">   
-                     <button class="QB buttonOne">1.strings</button>
-                     <button class="QB buttonOne">2.booleans</button>
-                     <button class="QB buttonOne correct">3.alerts</button>
-                     <button class="QB buttonOne">4.numbers</button>
-                </div>
-                
-            </section>
-            <section id="Q2" class="QS Q2 none" data-answer="3.parentheses">
-                <h1>The condition in an if / else statement is enclosed within <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>.</h1>
-                <button class="QB buttonTwo">1.quotes</button>
-                <button class="QB buttonTwo">2.curly brackets</button>
-                <button class="QB buttonTwo correct">3.parentheses</button>
-                <button class="QB buttonTwo">4.square brackets</button>
-            </section>
-            <section id = "Q3" class="QS Q3 none" data-answer="4.all of the above">
-                <h1>Arrays in JavaScript can be used to store <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>.</h1>  
-                <button class="QB buttonThree">1.numbersnand strings</button>
-                <button class="QB buttonThree">2.other arrays</button>
-                <button class="QB buttonThree">3.booleans</button>
-                <button class="QB buttonThree correct">4.all of the above</button>
-            </section>
-            <section id = "Q4" class="QS Q4 none" data-answer="3.quotes">
-                <h1>String values must be enclosed within <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span> when being assigned to variables.</h1>
-                <button class="QB buttonFour">1.commas</button>
-                <button class="QB buttonFour">2.curly brackets</button>
-                <button class="QB buttonFour correct">3.quotes</button>
-                <button class="QB buttonFour">4.parentheses</button>
-            </section>
-            <section id="Q5" class="QS Q5 none" data-answer="4.console log">
-                <h1>A very userful tool used during devlopment and debugging for printing content to the debugger is:</h1>
-                <button class="QB buttonFive">1.JavaScript</button>
-                <button class="QB buttonFive">2.terminal / bash</button>
-                <button class="QB buttonFive">3.for loops</button>
-                <button class="QB buttonFive correct">4.console log</button>
-            </section>
-            <section id ="end" class="QS end none">
-                <h1>All Done!</h1>
-                <p id="final-score"></p>
-                <label for="initals">Enter your initals: <input type="text" id="initals" name="intials"></label>
-                <button class="submit"><a id="submit" href="./highscores.html">Submit</a></button>
-            </section>
-        </form>
-       
+        <section id="Q1" class="QS none">
+            <h1>Commonly used data types DO NOT include:</h1>  
+            <button class="QB">1.strings</button>
+            <button class="QB">2.booleans</button>
+            <button class="QB correct">3.alerts</button>
+            <button class="QB">4.numbers</button>
+
+        </section>
+
+        <section id="Q2" class="QS none">
+            <h1>The condition in an if / else statement is enclosed within <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>.</h1>
+            <button class="QB">1.quotes</button>
+            <button class="QB">2.curly brackets</button>
+            <button class="QB correct">3.parentheses</button>
+            <button class="QB">4.square brackets</button>
+        </section>
+
+        <section id = "Q3" class="QS none">
+            <h1>Arrays in JavaScript can be used to store <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>.</h1>  
+            <button class="QB">1.numbersnand strings</button>
+            <button class="QB">2.other arrays</button>
+            <button class="QB">3.booleans</button>
+            <button class="QB correct">4.all of the above</button>
+        </section>
+
+        <section id = "Q4" class="QS none">
+            <h1>String values must be enclosed within <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span> when being assigned to variables.</h1>
+            <button class="QB">1.commas</button>
+            <button class="QB">2.curly brackets</button>
+            <button class="QB correct">3.quotes</button>
+            <button class="QB">4.parentheses</button>
+        </section>
+
+        <section id="Q5" class="QS none">
+            <h1>A very userful tool used during devlopment and debugging for printing content to the debugger is:</h1>
+            <button class="QB">1.JavaScript</button>
+            <button class="QB">2.terminal / bash</button>
+            <button class="QB">3.for loops</button>
+            <button class="QB correct">4.console log</button>
+        </section>
+
+        <section id ="end" class="QS end none">
+            <h1>All Done!</h1>
+            <p>Your Final Score is:</p>
+            <p id="final-score"></p>
+            <label for="initals">Enter your initals: <input type="text" id="initals" name="intials"></label>
+            <button class="submit"><a id="submit" href="./highscores.html">Submit</a></button>
+        </section>
     </main>
     <script src="./assets/script.js"></script>
 </body>
